buttons styles and onCheck functionality

--- a/src/Tasks.css
+++ b/src/Tasks.css
@@ -71,6 +71,8 @@ label {
     flex-direction: column;
     gap: 10px;
     width: 100%;
+} .oncheck {
+    text-decoration:line-through;
 }
 .time{
     display: flex;
