--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 :root{
   --btn-rad: 5px;
   --rad: 90px;
-  --hgt: 60vh;
-  --wdt: 80vw;
+  --hgt: 60dvh;
+  --wdt: 80dvw;
   --fnt-size-s: 2.5vh;
   --fnt-size-h: 5vh;
   --fnt-size-t: 2vh;
@@ -39,7 +39,6 @@
   width: 100%;
   height: 100vh;
   background-color: var(--bg);
-  transition: 2s;
 }.main {
   background-color: var(--pg);
 
@@ -56,7 +55,6 @@
   box-shadow: 0px 0px 18px -12px rgba(0, 0, 0, 1);
 
   border-radius: var(--rad);
-  transition: 2s;
 }
 
 /* MENU */
@@ -75,7 +73,6 @@
   align-items: center;
   gap: 40px;
 
-  transition: 2s;
 }
 
 .container {
@@ -109,17 +106,18 @@ button {
   max-width: 50px;
   max-height: 50px;
   font-size: var(--fnt-size-s);
-  transition: 0.5s;
+  transition: 0.2s;
 } .menu .btn:hover{
   width: 5.5vh;
   height: 5.5vh;
-  max-width: 66px;
-  max-height: 66px;
+  max-width: 60px;
+  max-height: 60px;
 } .buttonactive{
   width: 5.5vh;
   height: 5.5vh;
-  max-width: 66px;
-  max-height: 66px;
+  max-width: 60px;
+  max-height: 60px;
+  font-size: calc(var(--fnt-size-s) * 1);
 }
 
 .switch{
