--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 :root{
   --btn-rad: 5px;
   --rad: 90px;
-  --hgt: 60dvh;
+  --hgt: 65dvh;
   --wdt: 80dvw;
   --fnt-size-s: 2.5vh;
   --fnt-size-h: 5vh;
@@ -53,7 +53,7 @@
   justify-content: space-between;
   align-items: flex-start;
   width: var(--wdt);
-  max-width: 1400px;
+  max-width: 1200px;
   height: var(--hgt);
 
   -webkit-box-shadow: 0px 0px 33px -15px rgba(0, 0, 0, 1);
@@ -71,7 +71,7 @@
   text-align: center;
   font-weight: bold;
   font-size: var(--fnt-size-s);
-  border-right: 3px solid var(--bg);
+  border-right: 5px solid var(--bg);
 
   display: flex;
   flex-direction: column;
@@ -113,6 +113,9 @@ button {
   max-height: 50px;
   font-size: var(--fnt-size-s);
   transition: 0.2s;
+  -webkit-box-shadow: 0px 0px 33px -15px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 33px -15px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 33px -15px rgba(0, 0, 0, 1);
 } .menu .btn:hover{
   width: 5.5vh;
   height: 5.5vh;
