--- a/src/styles/Tasks.css
+++ b/src/styles/Tasks.css
@@ -95,13 +95,27 @@ label {
 } .no-tasks div {
     font-size: calc(var(--fnt-size-t) * 8);
     color: var(--bt);
+    animation: waiting 2.4s infinite linear;
 }
+@keyframes waiting { 
+    0% { 
+        transform: rotate(0deg)  
+        translateX(10px) rotate(0deg); 
+    } 
+    100% { 
+        transform: rotate(-360deg)  
+        translateX(10px) rotate(360deg); 
+    }
+} 
 b {
     font-size: calc(var(--fnt-size-t) + 4px);
 }
 i {
     font-size: calc(var(--fnt-size-t) - 7px);
+} .late{
+    text-decoration:underline dashed 2px red;
 }
+
 /* Scrollbar styles for WebKit browsers */
 *::-webkit-scrollbar {
     width: 6px;
