--- a/src/styles/SearchTasks.css
+++ b/src/styles/SearchTasks.css
@@ -8,6 +8,8 @@
 .search-tasks input {
     width: 48%;
     margin-top: 7dvh;
+} .search-tasks input:hover {
+    background-color: var(--bt-fc);
 } .search-tasks button {
     width: calc(10% - 20px);
     margin-top: 7dvh;
@@ -21,6 +23,8 @@
     transition: 0.5s;
     border-bottom: 6px solid var(--bg);
     cursor: pointer;
+} .search-tasks button:hover {
+    background-color: var(--bt-fc);
 } select {
     margin-top: 7dvh;
     width: 27%;
@@ -35,6 +39,10 @@
     border-bottom: 6px solid var(--bg);
     cursor: pointer;
     text-align: center;
+} select:hover {
+    background-color: var(--bt-fc);
+} option {
+    background-color: var(--bt);
 }
 
 .search-container {
